syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service CompanyProfile {
	rpc CreateCompanyProfile(CompanyProfileReply) returns (google.protobuf.Empty);
	rpc DeleteCompanyProfile(CompanyProfileReply) returns (google.protobuf.Empty);
	rpc ReadCompanyProfile(CompanyProfileRequest) returns (CompanyProfileReply);
	rpc UpdateCompanyProfile(CompanyProfileReply) returns (google.protobuf.Empty);
}

message CompanyProfileRequest {
	string id = 1;
}

message CompanyProfileReply {
	string id = 1;
	google.protobuf.Timestamp registration_date = 2;
	string company_website =3;
	string contact_phone = 4;
	string contact_name = 5;
	bytes company_logo = 6;
}